# MidiToChords

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  MidiChords.xml  README.md
Source/: ChordRecognizer.cpp  ChordRecognizer.h  ControlButtons.cpp  ControlButtons.h  NOTES.txt  NoteRangeDisplay.h  PluginEditor.cpp  PluginEditor.h  PluginGUI.cpp  PluginGUI.h  PluginProcessor.cpp  PluginProcessor.h
